--- a/login.html
+++ b/login.html
@@ -6,34 +6,57 @@
     <title>Login Page - Project Pilot</title>
     <style>
         body {
-            background-image: url("SES-Computer-Science-1900862161.avif"); /* Replace 'login-background.jpg' with the path to your image */
+            background-image: url("SES-Computer-Science-1900862161.avif");
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
-            font-family: Arial, sans-serif;
+            font-family: Arial, Helvetica, sans-serif;
             margin: 0;
             padding: 0;
             display: flex;
             justify-content: center;
             align-items: center;
-            flex-direction: column; /* Added to center the greeting line */
+            flex-direction: column;
             height: 100vh;
         }
 
         .login-container {
-            background-color: rgba(255, 255, 255, 0.8); /* Add transparency to make the form readable */
+            background-color: rgba(255, 255, 255, 0.8);
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             overflow: hidden;
-            width: 300px;
+            display: flex;
+            flex-direction: row;
+            width: 40%;
         }
 
-        .login-header {
+        .left-section {
+            flex: 6;
+            padding: 20px;
+            box-sizing: border-box;
             background-color: #3498db;
             color: #fff;
-            text-align: center;
-            padding: 20px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+        }
+
+        .right-section {
+            flex: 5;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .greeting-line {
             font-size: 24px;
+            margin-bottom: 20px;
+        }
+
+        .site-description {
+            font-size: 16px;
+            text-align: center;
         }
 
         .login-form {
@@ -80,37 +103,33 @@
             margin-top: 10px;
             color: #333;
         }
-
-        .greeting-line {
-            color: #000000;
-            font-size: 20px;
-            margin-bottom: 20px;
-            background-color: #27ae60;
-            padding: 10px;
-        }
     </style>
 </head>
 <body>
 
-<div class="greeting-line">
-    Welcome to Project Pilot - Login
-</div>
-
 <div class="login-container">
-    <div class="login-header">
-        Login
+    <div class="left-section">
+        <div class="greeting-line">
+            Welcome to Project Pilot
+        </div>
+        <div class="site-description">
+            <p>Explore the world of technology and collaboration. Login to your Project Pilot account and be a part of something extraordinary.</p>
+        </div>
     </div>
-    <div class="login-form">
-        <div class="form-group">
-            <label for="username">Username:</label>
-            <input type="text" id="username" name="username" placeholder="Enter your username" required>
+
+    <div class="right-section">
+        <div class="login-form">
+            <div class="form-group">
+                <label for="username">Username:</label>
+                <input type="text" id="username" name="username" placeholder="Enter your username" required>
+            </div>
+            <div class="form-group">
+                <label for="password">Password:</label>
+                <input type="password" id="password" name="password" placeholder="Enter your password" required>
+            </div>
+            <button class="login-btn" type="submit">Login</button>
+            <p class="signup-link">Don't have an account? <a href="signup.html">Signup</a></p>
         </div>
-        <div class="form-group">
-            <label for="password">Password:</label>
-            <input type="password" id="password" name="password" placeholder="Enter your password" required>
-        </div>
-        <button class="login-btn" type="submit">Login</button>
-        <p class="signup-link">Don't have an account? <a href="signup.html">Signup</a></p>
     </div>
 </div>
 
