--- a/Container/login.html
+++ b/Container/login.html
@@ -130,6 +130,7 @@
             </div>
             <button class="login-btn" type="submit">Login</button>
             <p class="signup-link">Don't have an account? <a href="signup.html">Signup</a></p>
+            <p class="signup-link"> <a href="signup.html">Forgot password?</a></p>
         </div>
     </div>
 </div>
