--- a/Container/signup.html
+++ b/Container/signup.html
@@ -141,6 +141,10 @@
                 <input type="password" id="password" name="password" placeholder="Enter your password" required>
             </div>
             <div class="form-group">
+                <label for="password-question">Security Question:</label>
+                <input type="password-question" id="password-question" name="password" placeholder="Enter your pet name" required>
+            </div>
+            <div class="form-group">
                 <label for="department">Department:</label>
                 <select id="department" name="department" required>
                     <option value="" disabled selected>Select your department</option>
