--- a/Container/viewprojects.html
+++ b/Container/viewprojects.html
@@ -38,7 +38,9 @@
                 <h2 style="color:#1a681c">Description</h2>
                 <p>This is the project description paragraph. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non veritatis sed omnis corporis ipsam possimus! Corrupti, repellendus natus? Maiores dolor voluptatum nostrum iure consequatur accusamus corrupti commodi ad reiciendis incidunt. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione ab recusandae molestiae error minus voluptatem consectetur, exercitationem quos quas commodi! Repudiandae fuga sint quo quisquam at ipsa incidunt placeat cumque?</p>
             </div>
+            <br>
             <hr>
+            <br>
             <div class="recent-activity-section">
               <br>
                 <h2 style="color:#1a681c">Recent Activity</h2>
@@ -74,11 +76,13 @@
                 <div class="status-node">Tasks: 5 of 10 Completed</div>
                 <div class="status-node">Progress: 50%</div>
                 <div class="status-node">Members
+                    <div style="margin-top:20px; margin-left: 20px;">
                     <ol type="1">
                         <li>Karan Walekar</li>
                         <li>Yogesh Lale</li>
                         <li>Harshada Navle</li>
                     </ol>
+                    </div>
                 </div>
             </div>
         </div>
