--- a/Container/login.html
+++ b/Container/login.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Page - Project Pilot</title>
+ 
     <style>
         body {
             background-image: url("https://images.pexels.com/photos/956999/milky-way-starry-sky-night-sky-star-956999.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2");
@@ -49,8 +50,12 @@
             align-items: center;
         }
 
-        .greeting-line {
+        .greeting-line1 {
             font-size: 24px;
+            margin-bottom: 10px;
+        }
+        .greeting-line2 {
+            font-size: 34px;
             margin-bottom: 20px;
         }
 
@@ -110,11 +115,10 @@
 
 <div class="login-container">
     <div class="left-section">
-        <div class="greeting-line">
-            Welcome to Project Pilot
-        </div>
+        <div class="greeting-line1">Welcome to</div>
+        <div class="greeting-line2">Project Pilot</div>
         <div class="site-description">
-            <p>Explore the world of technology and collaboration. Login to your Project Pilot account and be a part of something extraordinary.</p>
+            <p>Project storing website designed to streamline the organisation and management of your digital projects.</p>
         </div>
     </div>
 
@@ -128,12 +132,19 @@
                 <label for="password">Password:</label>
                 <input type="password" id="password" name="password" placeholder="Enter your password" required>
             </div>
-            <button class="login-btn" type="submit">Login</button>
+            <button id="login-button" class="login-btn" type="button">Login</button>
             <p class="signup-link">Don't have an account? <a href="signup.html">Signup</a></p>
             <p class="signup-link"> <a href="signup.html">Forgot password?</a></p>
         </div>
     </div>
 </div>
+
+<script>
+  const loginButton = document.getElementById("login-button");
+  loginButton.addEventListener("click", function() {
+    window.location.href = "myprojects.html";
+  });
+</script>
 
 </body>
 </html>
