--- a/Container/ff180.html
+++ b/Container/ff180.html
@@ -64,93 +64,68 @@
     <div class="sub-header">
         Title: Project Registration & Progress Review Form &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; FF No. 180
     </div>
-    <table>
-        <tr>
-            <th class="left-align">Department</th>
-            <td class="left-align">DOME</td>
-            <th class="right-align">Academic Year</th>
-            <td class="right-align">2023-24</td>
-        </tr>
-        <tr>
-            <th class="left-align">Semester</th>
-            <td class="left-align">II</td>
-            <th class="left-align">Group No.</th>
-            <td class="left-align">09</td>
-        </tr>
-        <tr>
-            <th class="col-span-2" colspan="2">Project Title</th>
-            <td class="col-span-2" colspan="2">Al-Powered Glasses for Visually Impaired: Voice-guided Interaction and Real-Time Environment Recognition</td>
-        </tr>
-        <tr>
-            <th class="left-align">Project Area</th>
-            <td class="left-align">Assistive Technologies</td>
-            <th class="col-span-2" colspan="2"></th>
-        </tr>
-        <tr>
-            <th colspan="6">Group Members Details</th>
-        </tr>
-        <tr>
-            <th>Sr No.</th>
-            <th>Class & Div.</th>
-            <th>Roll No.</th>
-            <th>Name of Student</th>
-            <th>Contact No.</th>
-            <th>Email ID</th>
-        </tr>
-        <tr>
-            <td>1</td>
-            <td>CSAI-A</td>
-            <td>28</td>
-            <td>Apurva Kota</td>
-            <td>7020444685</td>
-            <td>apurva.kota22@vit.edu</td>
-        </tr>
-        <tr>
-            <td>2</td>
-            <td>CSAI-A</td>
-            <td>30</td>
-            <td>Parth Kulkarni</td>
-            <td>8999755849</td>
-            <td>parth.kulkarni22@vit.edu</td>
-        </tr>
-        <tr>
-            <td>3</td>
-            <td>CSAI-A</td>
-            <td>32</td>
-            <td>Yogesh Lale</td>
-            <td>8261907106</td>
-            <td>yogesh.lale22@vit.edu</td>
-        </tr>
-        <tr>
-            <td>4</td>
-            <td>CSAI-A</td>
-            <td>42</td>
-            <td>Mitali Patil
-            </tr>       
-            <tr>
-                <th colspan="2" class="left-align">Name of Internal Guide</th>
-                <td colspan="2" class="left-align">Prof. Santosh Wagh</td>
-            </tr>
-            <tr>
-                <th colspan="2" class="left-align">Contact No. & Email ID</th>
-                <td colspan="2" class="left-align">7894561230 / santosh.wagh@vit.edu</td>
-            </tr>
-            <tr>
-                <th class="left-align">Role</th>
-                <td class="left-align">Guide</td>
-                <th class="left-align">Role</th>
-                <td class="left-align">Project Coordinator</td>
-            </tr>
-            <tr>
-                <th colspan="4">Project Approved / Not Approved</th>
-            </tr>
-            <tr>
-                <td colspan="4">&nbsp;</td> 
-            </tr>
-            <tr>
-                <th colspan="4">Head, Department of Multidisciplinary Engineering</th>
-            </tr>
-        </table>
-    </body>
-    </html>
-    
+    <table id="projectForm">
+        <!-- Your table structure -->
+    </table>
+
+    <script>
+        // JavaScript code to fetch data from the database and populate the form fields
+        window.onload = function () {
+            fetch('getData.php')
+            .then(response => response.json())
+            .then(data => fillForm(data))
+            .catch(error => console.error('Error fetching data:', error));
+        }
+
+        function fillForm(data) {
+            // Assuming data is fetched in the correct format
+            const project = data.project; // Assuming the fetched data is structured as an object with a 'project' key
+            
+            // Populating the form fields
+            document.getElementById('projectForm').innerHTML = `
+                <tr>
+                    <th class="left-align">Project Title</th>
+                    <td class="left-align" colspan="3">${project.title}</td>
+                </tr>
+                <tr>
+                    <th class="left-align">Start Date</th>
+                    <td class="left-align">${project.start_date}</td>
+                    <th class="left-align">Deadline</th>
+                    <td class="left-align">${project.deadline}</td>
+                </tr>
+                <tr>
+                    <th class="left-align">Project Guide</th>
+                    <td class="left-align" colspan="3">${project.guide}</td>
+                </tr>
+                <tr>
+                    <th class="left-align">Project Leader</th>
+                    <td class="left-align" colspan="3">${project.leader}</td>
+                </tr>
+                <tr>
+                    <th class="left-align">Project Description</th>
+                    <td class="left-align" colspan="3">${project.description}</td>
+                </tr>
+                <tr>
+                    <th class="left-align">Project Progress</th>
+                    <td class="left-align" colspan="3">${project.progress}%</td>
+                </tr>
+                <tr>
+                    <th class="left-align">Project Members</th>
+                    <td class="left-align">${project.member1}</td>
+                    <td class="left-align">${project.member2}</td>
+                    <td class="left-align">${project.member3}</td>
+                </tr>
+                <tr>
+                    <td class="left-align">${project.member4}</td>
+                    <td class="left-align">${project.member5}</td>
+                    <td class="col-span-2" colspan="2"></td>
+                </tr>
+                <tr>
+                    <th class="left-align">Tasks</th>
+                    <td class="left-align" colspan="3">${project.tasks}</td>
+                </tr>
+            `;
+        }
+    </script>
+</body>
+</html>
